# GeometryPropagator

./: .gitignore  README.md  assess.py  config.py  pyproject.toml  run_background.ipynb  run_cubesat.ipynb  run_cubesat_geometry.ipynb  run_flux.ipynb  run_geometry.ipynb  run_solarpanel.ipynb  run_spacecraft_geometry.ipynb  run_viewfactor.ipynb
docs/: ARCHITECTURE.md  ROADMAP.md  generate_dao_explainer.py  planner_explainer.py
geometry/: __init__.py  constants.py  earthdisk.py  laws.py  occlusion.py  orbit.py  panel.py  propagator.py  sampling.py  so3.py  transitions.py
geometry/CubeSat/: __init__.py  builder.py  inspect.py  plots.py  scene3d.py  surfaces.py
geometry/legacy/: __init__.py  scalar.py
kernel/: __init__.py  cap.py  constraint.py  engine.py  region.py  vec.py
latex/: main.tex
memory/: MEMORY.md  project_dao_thermal.md
planner/: attitude.py  config.py  constants.py  flight.py  main.py  optimize.py  orbit.py  ov6c.py  schedule.py  sun.py  sv7.py  target.py
tests/: test_geometry_package.py
thermal/: __init__.py  background.py  constants.py  plots.py  serialize.py  solver.py
viewfactor/: __init__.py  earthdisk.py  occlusion.py  panel.py  plots.py  propagator.py  sampling.py  serialize.py
