[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "GeometryPropagator"
version = "0.1.0"
description = "Spacecraft geometry and view-factor engine for orbit-driven thermal analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "phi-a" }
]

[tool.setuptools]
packages = ["geometry", "geometry.legacy", "tests"]
